fixing project logo overflow.

--- a/geoportal_1/src/main/webapp/resources/css/css/css/css/tooplate-style.css
+++ b/geoportal_1/src/main/webapp/resources/css/css/css/css/tooplate-style.css
@@ -26,7 +26,7 @@ body {
 .projectname {
 	float: right;
 	height: 120px;
-	width: 500px
+	width: 330px
 }
 
 .container {
